--- a/Prototype 1/Advance wars 2/Advance wars 2/Advance wars 2.csproj
+++ b/Prototype 1/Advance wars 2/Advance wars 2/Advance wars 2.csproj
@@ -16,6 +16,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <ItemGroup>
     <Content Include="app.css" />
@@ -38,10 +39,12 @@
     <TypeScriptCompile Include="ts\gameState\gameObject.ts" />
     <TypeScriptCompile Include="ts\gameState\Tile.ts" />
     <TypeScriptCompile Include="ts\gameState\GameMap.ts" />
-    <TypeScriptCompile Include="ts\gameState\Unit\MoveBehaviour\IDraw.ts" />
-    <TypeScriptCompile Include="ts\gameState\Unit\MoveBehaviour\IUpdate.ts" />
-    <TypeScriptCompile Include="ts\gameState\Unit\MoveBehaviour\NormalMove.ts" />
-    <TypeScriptCompile Include="ts\gameState\Unit\MoveBehaviour\IMoveBehaviour.ts" />
+    <TypeScriptCompile Include="ts\gameState\Unit\Behavior\IBehavior.ts" />
+    <TypeScriptCompile Include="ts\gameState\Unit\Behavior\MoveBehaviour\IDraw.ts" />
+    <TypeScriptCompile Include="ts\gameState\Unit\Behavior\MoveBehaviour\IUpdate.ts" />
+    <TypeScriptCompile Include="ts\gameState\Unit\Behavior\BehaviorTree.ts" />
+    <TypeScriptCompile Include="ts\gameState\Unit\Behavior\MoveBehaviour\NormalMove.ts" />
+    <TypeScriptCompile Include="ts\gameState\Unit\Behavior\MoveBehaviour\IMoveBehaviour.ts" />
     <TypeScriptCompile Include="ts\gameState\Unit\UnitState\Moving.ts" />
     <TypeScriptCompile Include="ts\presentation\AnimationList.ts" />
     <TypeScriptCompile Include="ts\presentation\Animation.ts" />
